[gd_scene load_steps=44 format=2]

[ext_resource path="res://Resources/Jugador/Attack2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Personatge.gd" type="Script" id=2]
[ext_resource path="res://Resources/Jugador/Run.png" type="Texture" id=3]
[ext_resource path="res://Resources/Jugador/Fall.png" type="Texture" id=4]
[ext_resource path="res://Resources/Jugador/Jump.png" type="Texture" id=5]
[ext_resource path="res://Resources/Jugador/Idle.png" type="Texture" id=6]
[ext_resource path="res://Resources/Jugador/Death.png" type="Texture" id=7]
[ext_resource path="res://Resources/fondo.png" type="Texture" id=8]
[ext_resource path="res://Resources/cors.png" type="Texture" id=9]
[ext_resource path="res://Resources/Jugador/Take hit.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 800, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1000, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1200, 0, 200, 200 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1400, 0, 200, 200 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "morir",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "atacar",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "caure",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "saltar",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "correr",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=29]
radius = 16.0
height = 26.0

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 22.25, 6.25 )

[sub_resource type="Animation" id=31]
resource_name = "Morir"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("../morir:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=32]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../morir:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Personatge" type="KinematicBody2D"]
position = Vector2( 512, 303 )
script = ExtResource( 2 )

[node name="animacions_personatge" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
frames = SubResource( 28 )
animation = "caure"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6, 2 )
shape = SubResource( 29 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1169.41, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -12, -404 )
scale = Vector2( 2.74526, 2.8125 )
texture = ExtResource( 8 )
centered = false

[node name="espasa" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="espasa"]
position = Vector2( 65.75, -12.75 )
shape = SubResource( 30 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="espasa"]
position = Vector2( -54, -13 )
shape = SubResource( 30 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="morir" type="Sprite" parent="."]
position = Vector2( 8, 0 )
texture = ExtResource( 7 )
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="morir"]
root_node = NodePath("../../animacions_personatge")
anims/Morir = SubResource( 31 )
anims/RESET = SubResource( 32 )

[node name="Cors" type="Sprite" parent="."]
position = Vector2( 408, 276 )
scale = Vector2( 0.101378, 0.101378 )
texture = ExtResource( 9 )

[node name="Cors2" type="Sprite" parent="."]
position = Vector2( 438, 276 )
scale = Vector2( 0.101378, 0.101378 )
texture = ExtResource( 9 )

[node name="Cors3" type="Sprite" parent="."]
position = Vector2( 469, 276 )
scale = Vector2( 0.101378, 0.101378 )
texture = ExtResource( 9 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
